# nylawm

./: .clang-format  .editorconfig  .gitignore  2  ;  CMakeLists.txt  Makefile  config.hpp  main.cpp  meson.build  shaders_postprocess.py  util.hpp  xcb_man.c
data/gl/: FragmentShader.glsl  VertexShader.glsl
include/: cirnowm.hpp  utils.hpp
src/: CMakeLists.txt  actions.cpp  backend_egl.cpp  compositor.cpp  conf.hpp  conf_types.hpp  config.hpp  egl.cpp  egl.hpp  event_handler.cpp  event_handler.hpp  gl.hpp  handlers.cpp  internal.hpp  main.cpp  main_.cpp  nyla.c  nyla.cpp  nyla.h  nyla.hpp  nyla_unity.h  nylaunity.hpp  overlay.c  overlay.cpp  shader_sources.cpp  stash.cpp  testegl.cpp  util.hpp  utils.c  utils.cpp  utils.hpp  window_manager.cpp  window_manager.hpp  wm.cpp  wm.hpp  wm_instance.cpp  wm_instance.hpp  x.cpp  x.hpp  xevent_handler.hpp
src/old/: ;  main.cpp  nyla.cpp  shader_sources.hpp
src/snippets/: egl_example.c  links.txt  stash.cpp  testegl.cpp
tests/: CMakeLists.txt  basic.cpp
